--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0px;
     padding-top: 60px;
@@ -10,7 +11,7 @@ body {
     font-style: italic;
     font-weight: bold;
     font-family: 'Artifika', serif;
-    color: #95a5a6;
+    color: #abafaf;
     font-size: 22px;
 }
 .navbar .navbar-brand i{
@@ -49,9 +50,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-/* .card-header span{
-    float: right;
-} */
+
 .card-body {
     width: 100%;
     height: 70%;
@@ -62,4 +61,3 @@ body {
     height: 100%;
     object-fit: cover; 
 }
-
